--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,10 @@ services:
       restart: always
       ports:
        - "80:80"
+      links:
+          - php-fpm
+      depends_on:
+          - php-fpm
       networks:
         my-network:
           ipv4_address: 10.0.9.24
@@ -59,7 +63,14 @@ services:
       container_name: develop-php-fpm
       working_dir: /application
       restart: always
+      links:
+          - memcached
+          - redis
+      depends_on:
+          - memcached
+          - redis
       volumes:
+        - ./../www:/usr/local/apache2/htdocs
         - .:/application
         - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.2/fpm/conf.d/99-overrides.ini
       networks:
@@ -68,4 +79,7 @@ services:
 
 networks:
   my-network:
-    external: true
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 10.0.9.0/16
